[tool.poetry]
name = "webpub1c"
version = "0.1.0"
description = "1C: Enterprise infobase web publication tool"
authors = ["Dmitry Belyaev <b4tm4n@mail.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/b4tman/webpub1c"
repository = "https://github.com/b4tman/webpub1c"
keywords = ["1C", "apache", "publication", "web", "infobase"]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1"
fire = "0.7.1"
pyyaml = "6.0.3"
pathvalidate = "3.3.1"
transliterate = "1.10.2"
markupsafe = "3.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
flake8 = "^7.3.0"
black = "^26.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=8.2,<9.1"
myst-parser = "^5.0.0"
sphinx-rtd-theme = "^3.1.0"
sphinx-design = "^0.7.0"
sphinx-copybutton = "^0.5.2"

[tool.poetry.scripts]
webpub1c = "webpub1c.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
